--- a/app/src/main/res/layout/activity_course_registration.xml
+++ b/app/src/main/res/layout/activity_course_registration.xml
@@ -29,23 +29,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="end"
+            android:gravity="center"
             android:layout_marginBottom="16dp">
 
-            <!-- Semester Spinner -->
             <Spinner
                 android:id="@+id/semesterSpinner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginEnd="16dp" />
 
-            <!-- Year Spinner -->
             <Spinner
                 android:id="@+id/yearSpinner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="48dp" />
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/courseItemsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
 
-        <!-- Course items will be added by the java code here -->
     </LinearLayout>
+
+
+
 </ScrollView>
