--- a/app/src/main/res/layout/activity_instructor_home.xml
+++ b/app/src/main/res/layout/activity_instructor_home.xml
@@ -50,11 +50,21 @@
         android:layout_marginTop="16dp" />
 
     <Button
+        android:id="@+id/previousStudentsButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/view_previous_students"
+        app:layout_constraintTop_toBottomOf="@id/currentStudentsButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
+    <Button
         android:id="@+id/instructorLogoutButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/logout"
-        app:layout_constraintTop_toBottomOf="@id/currentStudentsButton"
+        app:layout_constraintTop_toBottomOf="@id/previousStudentsButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp" />
