Finished Academic History. Removed blue bar at top. Changed colors.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#003366</color>
+    <color name="colorPrimaryDark">#002244</color>
+    <color name="colorAccent">#F2A900</color>
 </resources>
