--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
     <resources>
-        <style name="Theme.Phase3" parent="Theme.AppCompat.Light.DarkActionBar">
-            <item name="colorPrimary">#2196F3</item>
-            <item name="colorPrimaryDark">#1976D2</item>
-            <item name="colorAccent">#FF4081</item>
+        <style name="Theme.Phase3" parent="Theme.AppCompat.Light.NoActionBar">
+            <item name="colorPrimary">#003366</item>
+            <item name="colorPrimaryDark">#002244</item>
+            <item name="colorAccent">#F2A900</item>
         </style>
     </resources>
 
