--- a/app/src/main/res/layout/item_student_history.xml
+++ b/app/src/main/res/layout/item_student_history.xml
@@ -69,7 +69,7 @@
         android:text="A"
         android:textSize="28sp"
         android:layout_marginEnd="12sp"
-        android:textColor="#2196F3"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/gradeLabel"
         app:layout_constraintBottom_toBottomOf="parent"
