--- a/app/src/main/res/layout/activity_student_alerts.xml
+++ b/app/src/main/res/layout/activity_student_alerts.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/titleTextView"
@@ -13,6 +14,8 @@
         android:textColor="#000000"
         android:textSize="28sp"
         android:textStyle="bold"
+        android:paddingTop="16dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
