Renamed studentRegister to CreateStudentAccountActivity. Added titles for instructor pages. Fixed error with View Taught Sections.

--- a/app/src/main/res/layout/activity_instructor_home.xml
+++ b/app/src/main/res/layout/activity_instructor_home.xml
@@ -10,9 +10,10 @@
         android:id="@+id/instructorWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/welcome"
+        android:text="@string/welcome_instructor"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
