--- a/app/src/main/res/layout/item_student_schedule.xml
+++ b/app/src/main/res/layout/item_student_schedule.xml
@@ -27,7 +27,7 @@
             android:layout_weight="1"
             android:gravity="start"
             android:text="CSCI101 - Section102"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:text="11:00:00 - 12:00:00"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
