--- a/app/src/main/res/layout/activity_create_student_account.xml
+++ b/app/src/main/res/layout/activity_create_student_account.xml
@@ -10,11 +10,11 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Student Account"
+        android:text="@string/create_student_account"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="#000000"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="108dp"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
