--- a/app/src/main/res/layout/activity_instructor_grade.xml
+++ b/app/src/main/res/layout/activity_instructor_grade.xml
@@ -3,16 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit Midterm Grades"
-        android:textSize="30sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="#000000"
+        android:paddingTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
