--- a/app/src/main/res/layout/activity_student_alerts.xml
+++ b/app/src/main/res/layout/activity_student_alerts.xml
@@ -10,9 +10,9 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Academic Information"
+        android:text="Grades &amp; Alerts"
         android:textColor="#000000"
-        android:textSize="28sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:paddingTop="16dp"
 
