--- a/app/src/main/res/layout/activity_student_choice.xml
+++ b/app/src/main/res/layout/activity_student_choice.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="96dp"
         android:layout_marginBottom="8dp"
         android:text="@string/welcome_student"
-        android:textColor="#000000"
+        android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"
 
