--- a/app/src/main/res/layout/item_grade.xml
+++ b/app/src/main/res/layout/item_grade.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
             android:text="Course ID - Course Name" />
 
         <TextView
