--- a/app/src/main/res/layout/item_student_history.xml
+++ b/app/src/main/res/layout/item_student_history.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:text="CSCI101 - 001"
         android:textSize="18sp"
-        android:textColor="#000000"
+        android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
         android:text="A"
         android:textSize="28sp"
         android:layout_marginEnd="12sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/gradeLabel"
         app:layout_constraintBottom_toBottomOf="parent"
